# Schlomo-s-Bath

./: .gitignore  CMakeLists.txt  FEATURE_ROADMAP.md  README.md  Schlomo-s-Bath - Shortcut.lnk  build.bat  install.bat  quick_setup.bat
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VocalProcessor.cpp  VocalProcessor.h
